Added something new

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <div class="input-group">
         <label>Email Id</label>
         <input type="email" placeholder="Enter Email" id="contactEmail" onkeyup="validateEmail()">
+        <p class="emailCaption">(Must have 1 Capital Alphabet, (.)decimal, 0-9 numbers)</p>
         <span id="emailError"></span>
+        
       </div>   
 
       <div class="input-group">
